readability article fixes

--- a/style.less
+++ b/style.less
@@ -209,8 +209,8 @@ h2 a:focus {
 @media all and (min-width: 800px)  { 
 
     article {
-        padding: 30px 60px;  
-        border: 0px solid #eee;
+        padding: 30px 0;  
+        border-bottom: 1px solid #eee;
         // border-top-width: 4px;
         margin-bottom: 20px;
 
@@ -235,7 +235,7 @@ h2 a:focus {
     }
 
     body {
-        max-width: 55em;
+        max-width: 32.5em;
         margin: 0 auto;
     }
  
